--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -16,25 +16,22 @@
     <div class="text-center">
         <h1 class="display-4">Equipos</h1>
 
+           
         @foreach (Equipo equi in @ViewBag.Lista)
         {
 
-            <div class="card-group">
-                <div class="card">
-                    <img class="card-img-top" src="@equi.Escudo" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">@equi.Nombre</h5>
-                        
-                    </div>
-                </div>  
-            </div>
-
-            <p> @equi.Nombre </p>
-            <img src="@equi.Escudo">
-
-            
-        }
-        
+            <div class="card" style="width: 18rem;">
+                <img src="@equi.Escudo" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">@equi.Nombre</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>           
+                
+                
+        }        
+  
 
     </div>
     
