--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                  <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="nav flex-grow-1 justify-content-between">
                         <li class="nav-item">
-                            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Qatar 2022</a>
+                            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">QATAR 2022</a>
                         </li>                        
                     </ul>
                  </div>
