--- a/Views/Home/DetalleJugador.cshtml
+++ b/Views/Home/DetalleJugador.cshtml
@@ -14,10 +14,11 @@
 <body class="body">
 
     <h1 class="mt-5">@ViewBag.DetalleJugador.Nombre</h1>
+    <img src="@ViewBag.DetalleJugador.Foto" alt="" class="mt-4 w-25">
+    <h5 class="mt-4">Fecha de nacimiento: @ViewBag.DetalleJugador.FechaNacimiento.ToShortDateString().</h5>
+    <h5 class="mt-4">Equipo: @ViewBag.DetalleJugador.EquipoActual. </h5>       
 
-    
-
-    
-    
+    <a href='@Url.Action("VerDetalleEquipo","Home", new {IdEquipo=@ViewBag.DetalleJugador.IdEquipo})' class="btn btn-primary mt-4 mb-5">Volver Atrás</a>
+    <br><br><br><br>
 </body>
 </html>
