--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -21,7 +21,8 @@
         {
 
             <div class="card" style="width: 20rem;">
-                <img src="@equi.Escudo" class="card-img-top" alt="...">
+                <a href='@Url.Action("VerDetalleEquipo","Home", new {IdEquipo=equi.IdEquipo})'><img src="@equi.Escudo" class="card-img-top" alt="..."></a>
+                
                 <div class="card-body">
                     <h5 class="card-title">@equi.Nombre</h5>                                     
                     <a href='@Url.Action("VerDetalleEquipo","Home", new {IdEquipo=equi.IdEquipo})' class="btn btn-primary">Ver equipo</a>
