--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
                 
         }        
 
-        <a href='@Url.Action("AgregarEquipo","Home")' class="btn btn-primary mt-3">Agregar equipo +</a>
+        <a href='@Url.Action("AgregarEquipo","Home")' class="btn btn-primary mt-3 mb-5">Agregar equipo +</a>
   
 
     </div>
