--- a/Views/Home/DetalleJugador.cshtml
+++ b/Views/Home/DetalleJugador.cshtml
@@ -14,7 +14,7 @@
 <body class="body">
 
     <h1 class="mt-5">@ViewBag.DetalleJugador.Nombre</h1>
-    <img src="@ViewBag.DetalleJugador.Foto" alt="" class="mt-4 w-25">
+    <img src="/jugadores/@ViewBag.DetalleJugador.Foto" alt="" class="mt-4 w-25">
     <h5 class="mt-4">Fecha de nacimiento: @ViewBag.DetalleJugador.FechaNacimiento.ToShortDateString().</h5>
     <h5 class="mt-4">Equipo: @ViewBag.DetalleJugador.EquipoActual. </h5>       
 
