--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -16,21 +16,28 @@
     <div class="text-center">
 
         <h1 class="mt-5">Equipos</h1>
-           
-        @foreach (Equipo equi in @ViewBag.Lista)
-        {
+        
+        <div class="container"> 
 
-            <div class="card" style="width: 20rem;">
-                <a href='@Url.Action("VerDetalleEquipo","Home", new {IdEquipo=equi.IdEquipo})'><img src="@equi.Escudo" class="card-img-top" alt="..."></a>
-                
-                <div class="card-body">
-                    <h5 class="card-title">@equi.Nombre</h5>                                     
-                    <a href='@Url.Action("VerDetalleEquipo","Home", new {IdEquipo=equi.IdEquipo})' class="btn btn-primary">Ver equipo</a>
-                </div>
-            </div>                           
-                
-        }        
+            <div class="row">
 
+                @foreach (Equipo equi in @ViewBag.Lista)
+                {
+                    <div class="col-sm">
+                        <div class="card" style="width: 20rem;">
+                            <a href='@Url.Action("VerDetalleEquipo","Home", new {IdEquipo=equi.IdEquipo})'><img src="@equi.Escudo" class="card-img-top" width="300px" height="300px" alt="..."></a>
+                            
+                            <div class="card-body">
+                                <h5 class="card-title">@equi.Nombre</h5>                                     
+                                <a href='@Url.Action("VerDetalleEquipo","Home", new {IdEquipo=equi.IdEquipo})' class="btn btn-primary">Ver equipo</a>
+                            </div>
+                        </div> 
+                    </div>                          
+                        
+                }        
+
+            </div>
+        </div> 
         <a href='@Url.Action("AgregarEquipo","Home")' class="btn btn-primary mt-3 mb-5">Agregar equipo +</a>
   
 
