Add Nav, otros pares de cosas

--- a/Views/Home/AgregarEquipo.cshtml
+++ b/Views/Home/AgregarEquipo.cshtml
@@ -2,18 +2,9 @@
     ViewData["Title"] = "AgregarEquipo";
 }
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>    
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-</head>
-<body class="body">
 
-    <h1 class="mt-5">Crear Equipo</h1>
+
+<h1 class="mt-5">Crear Equipo</h1>
 
     <form class="mt-4" method="post" action='@Url.Action("GuardarEquipo", "Home")' enctype="multipart/form-data">
 
@@ -39,7 +30,13 @@
 
         <div class="form-group">
             <label>Continente:</label>
-            <input type="text" class="form-control" name="Continente" placeholder="Continente...">
+            <select class="form-select" name="Continente">
+                <option value="Africa">Africa</option>
+                <option value="America">America</option>
+                <option value="Europa">Europa</option>
+                <option value="Asia">Asia</option>
+            </select>
+            
         </div>
 
         <div class="form-group">
@@ -51,7 +48,3 @@
     </form>
 
     <br><br><br><br>
-
-        
-</body>
-</html>
