--- a/Views/Home/DetalleEquipo.cshtml
+++ b/Views/Home/DetalleEquipo.cshtml
@@ -2,17 +2,6 @@
     ViewData["Title"] = "DetalleEquipo";
 }
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>    
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-</head>
-<body class="body">
-
     <div class="flex-container">
 
         <div class="flex-item">
@@ -29,7 +18,7 @@
         <div class="flex-item">
 
             <table class="table mt-5">
-                <thead class="thead-dark">
+                <thead class="thead bg-dark text-white">
                     <tr>
                     <th scope="col">JUGADOR</th>
                     <th scope="col">Número Camiseta</th>
@@ -57,5 +46,3 @@
 
     </div>
     
-</body>
-</html>
