--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,20 +9,22 @@
     <link rel="stylesheet" href="~/Qatar22.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <header class="">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom box-shadow mb-3">
             <div class="container">        
-                <img src="/imagenes/logo.png" alt="" class="" width="13%" height="auto">                
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <img src="/imagenes/logoNav.png" alt="" class="" width="9%" height="auto">                
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="nav flex-grow-1 justify-content-between">
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between" id="navbarNavDropdown">
+                    <ul class="nav navbar-nav flex-grow-1 justify-content-end">
                         <li class="nav-item">
-                            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Qatar 2021</a>
-                        </li>                        
+                            <a class="navbar-brand text-light" asp-area="" asp-controller="Home" asp-action="Index">Qatar 2022</a>
+                        </li>        
+
+                        
+                                 
                     </ul>
                  </div>
             </div>
