--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,13 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 
+    <h1 class="mt-5 mb-5">Equipos</h1>
 
-    <div class="text-center">
+    <div class="text-center">        
 
-        
-
-        <h1 class="mt-5">Equipos</h1>
-        
+                
         <div class="container"> 
 
             <div class="row">
