--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,37 +9,21 @@
     <link rel="stylesheet" href="~/Qatar22.styles.css" asp-append-version="true" />
 </head>
 <body>
-<<<<<<< HEAD
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow shadow mb-3">
             <div class="container"> 
-                <img src="/imagenes/logoNav.png" alt="" class="" width="15%" height="auto">   
+                <img src="/imagenes/LogoNav.png" alt="" class="justify-content-center" width="13%" height="auto">   
                            
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
-=======
-    <header class="">
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom box-shadow mb-3">
-            <div class="container">        
-                <img src="/imagenes/logoNav.png" alt="" class="" width="9%" height="auto">                
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
->>>>>>> 121cc9d7c79d300194571661cd124460c15c6085
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
                  <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="nav flex-grow-1 justify-content-end">
                         <li class="nav-item">
-<<<<<<< HEAD
                             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="color: white;">Qatar 2022</a>
                         </li>                                                
-=======
-                            <a class="navbar-brand text-light" asp-area="" asp-controller="Home" asp-action="Index">Qatar 2022</a>
-                        </li>        
-
-                        
-                                 
->>>>>>> 121cc9d7c79d300194571661cd124460c15c6085
                     </ul>
                  </div>
             </div>
@@ -51,7 +35,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="shadow-lg footer text-muted">
         
         <div class="container">
             &copy; 2022 - Qatar22 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
