--- a/Views/Home/DetalleEquipo.cshtml
+++ b/Views/Home/DetalleEquipo.cshtml
@@ -11,7 +11,7 @@
             <img src="@ViewBag.DetalleEquipo.Camiseta" alt="" class="mt-3 ml-4 w-25">
             <h4 class="mt-4">Continente: @ViewBag.DetalleEquipo.Continente</h4>  
             <h4 class="mt-4">Copas ganados: @ViewBag.DetalleEquipo.CopasGanadas</h4>
-            <a href='@Url.Action("AgregarJugador","Home", new {IdEquipo=@ViewBag.DetalleEquipo.IdEquipo})' class="btn btn-primary mt-4">Agregar jugador +</a>
+            <a href='@Url.Action("AgregarJugador","Home", new {IdEquipo=@ViewBag.DetalleEquipo.IdEquipo})' class="btn boton mt-4 shadow">Agregar jugador +</a>
             
         </div>
 
