Add imagenes card, add tabla jugadores, add detalle jugador

--- a/Views/Home/DetalleEquipo.cshtml
+++ b/Views/Home/DetalleEquipo.cshtml
@@ -17,27 +17,27 @@
 
         <div class="flex-item">
 
-            <table class="table mt-5">
-                <thead class="thead bg-dark text-white">
+            <table class="table mt-5 " style="" >
+                <thead class="thead bg-dark text-white text-center">
                     <tr>
-                    <th scope="col">JUGADOR</th>
-                    <th scope="col">Número Camiseta</th>
+                    <th scope="col">Nombre Jugador</th>
+                    <th scope="col" >Número Camiseta</th>
                     <th scope="col">Detalle Jugador</th>
                     <th scope="col"> </th>
                     <th scope="col"> </th>
                     
                     </tr>
                 </thead>
-                <tbody>
+                <tbody class="bg-light text-black text-center">
 
                     @foreach (Jugador jug in @ViewBag.ListarJugadores)
                     {
                         <tr>
                             <th scope="row">@jug.Nombre</th>
                             <td>@jug.NumCamiseta</td>
-                            <td><a href='@Url.Action("VerDetalleJugador","Home", new {IdJugador = jug.IdJugador})'>Información</a></td>     
+                            <td><a href='@Url.Action("VerDetalleJugador","Home", new {IdJugador = jug.IdJugador})' class="text-secondary">Información</a></td>     
                             <td><a href='@Url.Action("EliminarJugador","Home", new {IdJugador=@jug.IdJugador, IdEquipo=@ViewBag.DetalleEquipo.IdEquipo})' class="btn btn-danger">Borrar jugador</a></td>
-                            <td><a href='@Url.Action("EditarJugador","Home", new {IdJugador=@jug.IdJugador, IdEquipo=@ViewBag.DetalleEquipo.IdEquipo})' class="btn btn-info">Editar jugador</a></td>   
+                            <td><a href='@Url.Action("EditarJugador","Home", new {IdJugador=@jug.IdJugador, IdEquipo=@ViewBag.DetalleEquipo.IdEquipo})' class="btn btn-warning">Editar jugador</a></td>   
                         </tr>               
                     }
                         
