--- a/Views/Home/DetalleJugador.cshtml
+++ b/Views/Home/DetalleJugador.cshtml
@@ -8,5 +8,5 @@
     <h5 class="mt-4">Fecha de nacimiento: @ViewBag.DetalleJugador.FechaNacimiento.ToShortDateString().</h5>
     <h5 class="mt-4">Equipo: @ViewBag.DetalleJugador.EquipoActual. </h5>       
 
-    <a href='@Url.Action("VerDetalleEquipo","Home", new {IdEquipo=@ViewBag.DetalleJugador.IdEquipo})' class="btn btn-primary mt-4 mb-5">Volver Atrás</a>
+    <a href='@Url.Action("VerDetalleEquipo","Home", new {IdEquipo=@ViewBag.DetalleJugador.IdEquipo})' class="btn btn-secondary mt-4 mb-5">Volver Atrás</a>
     <br><br><br><br>
