Editar jugador terminado

--- a/Views/Home/EditarJugador.cshtml
+++ b/Views/Home/EditarJugador.cshtml
@@ -9,7 +9,7 @@
     <form class="mt-4" method="post" action='@Url.Action("GuardarEdit", "Home")' enctype="multipart/form-data">
 
         <div class="form-group">
-            <label>Id Equipo, sino fue transferido ponga el id @ViewBag.IdEquipo </label>
+            <label>Id Equipo, sino se nacionalizo ponga el id @ViewBag.IdEquipo </label>
             <input type="number" class="form-control" name="IdEquipo" placeholder="Id del equipo...">
         </div>
 
