Add youtube video

--- a/Views/Home/DetalleEquipo.cshtml
+++ b/Views/Home/DetalleEquipo.cshtml
@@ -7,10 +7,14 @@
         <div class="flex-item">
             
             <h1 class="mt-4">@ViewBag.DetalleEquipo.Nombre</h1>
-            <img src="@ViewBag.DetalleEquipo.Escudo" alt=""class="mt-4 w-25">
+            <img src="/equipos/@ViewBag.DetalleEquipo.Escudo" alt=""class="mt-4 w-25">
             <img src="@ViewBag.DetalleEquipo.Camiseta" alt="" class="mt-3 ml-4 w-25">
             <h4 class="mt-4">Continente: @ViewBag.DetalleEquipo.Continente</h4>  
             <h4 class="mt-4">Copas ganados: @ViewBag.DetalleEquipo.CopasGanadas</h4>
+            <iframe width="560" height="315" class="mt-4" src="@ViewBag.DetalleEquipo.Video" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            
+            <br>
+
             <a href='@Url.Action("AgregarJugador","Home", new {IdEquipo=@ViewBag.DetalleEquipo.IdEquipo})' class="btn boton mt-4 shadow">Agregar jugador +</a>
             
         </div>
