--- a/Views/Home/AgregarEquipo.cshtml
+++ b/Views/Home/AgregarEquipo.cshtml
@@ -45,6 +45,11 @@
             <label class="h5">Copas ganadas:</label>
             <input style="background:rgba(255,255,255, 0.05); border-color:rgba(255,255,255, 0.05); color:white;" type="number" class="form-control shadow" name="CopasGanadas" placeholder="Copas ganadas..." autocomplete="off" required>
         </div>
+
+        <div class="form-group mb-4">
+            <label class="h5">Video presentación (link):</label>
+            <input style="background:rgba(255,255,255, 0.05); border-color:rgba(255,255,255, 0.05); color:white;" type="text" class="form-control shadow" name="Video" placeholder="Video..." autocomplete="off">
+        </div>
         
         <button type="submit" class="btn btn-dark mt-4">Crear equipo</button>
     </form>
